# tinygrammar

./: .gitignore  CMakeLists.txt
tinygrammar/: common.h  grammar_core.cpp  ui.h
